Update java.md